--- a/index.html
+++ b/index.html
@@ -1,108 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GoIt HTML Dersi 1</title>
-</head>
+  </head>
 
-<body>
-    <header>
-
-    </header>
-
-
+  <body>
+    <header></header>
 
     <header>
-        <h1>Başlık</h1>
-        <h2>Başlık</h2>
-        <h3>Başlık</h3>
-        <h4>Başlık</h4>
-        <h5>Başlık</h5>
-        <h6>Başlık</h6>
+      <h1>Başlık</h1>
+      <h2>Başlık</h2>
+      <h3>Başlık</h3>
+      <h4>Başlık</h4>
+      <h5>Başlık</h5>
+      <h6>Başlık</h6>
     </header>
     <main>
-        <!--yönlendirme etiketi-->
-        <a href="https://www.google.com/" target="_blank">buraya tıkla</a>
-        <a href="#burak">git</a>
-        <a href="mailto:buraksarpkaya89@gmail.com">gönder</a>
-        <a href="tel:02123333333">Ara</a>
-        <!--sırasız liste-->
-        <ul>
-            <li>elma</li>
-            <li>armut</li>
-            <li>karpuz</li>
-        </ul>
-        <!--sıralı liste-->
-        <ol>
-            <li>araba</li>
-            <li>ev</li>
-            <li>otobus</li>
-        </ol>
+      <!--yönlendirme etiketi-->
+      <a href="https://www.google.com/" target="_blank">buraya tıkla</a>
+      <a href="#burak">git</a>
+      <a href="mailto:buraksarpkaya89@gmail.com">gönder</a>
+      <a href="tel:02123333333">Ara</a>
+      <!--sırasız liste-->
+      <ul>
+        <li>elma</li>
+        <li>armut</li>
+        <li>karpuz</li>
+      </ul>
+      <!--sıralı liste-->
+      <ol>
+        <li>araba</li>
+        <li>ev</li>
+        <li>otobus</li>
+      </ol>
 
-        <ul>
-            <li>lorem20</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, magnam?</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, voluptatum!</li>
-            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto, dignissimos.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quasi?</li>
-            <li id="burak">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ut est nihil
-                voluptatibus voluptas excepturi impedit voluptates laboriosam autem modi odit labore neque, similique
-                officia alias? Deserunt deleniti possimus placeat consequuntur optio. Veritatis voluptatibus et iste
-                provident at quae similique veniam est magni natus voluptatum quod deleniti alias quos, enim quisquam?
-                Commodi in iusto, quidem, quod autem reiciendis inventore magni nostrum ratione eveniet, corrupti
-                dolores ad? Hic corrupti nulla ipsam cupiditate molestias? Veniam perspiciatis atque earum, voluptatum
-                omnis iusto voluptate aliquid, dolorum voluptates totam eaque? Quae laborum quam placeat ad blanditiis
-                autem facilis magnam architecto eveniet mollitia quod, rem possimus.</li>
-        </ul>
+      <ul>
+        <li>lorem20</li>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
+          magnam?
+        </li>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+          voluptatum!
+        </li>
+        <li>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto,
+          dignissimos.
+        </li>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quasi?
+        </li>
+        <li id="burak">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
+          ut est nihil voluptatibus voluptas excepturi impedit voluptates
+          laboriosam autem modi odit labore neque, similique officia alias?
+          Deserunt deleniti possimus placeat consequuntur optio. Veritatis
+          voluptatibus et iste provident at quae similique veniam est magni
+          natus voluptatum quod deleniti alias quos, enim quisquam? Commodi in
+          iusto, quidem, quod autem reiciendis inventore magni nostrum ratione
+          eveniet, corrupti dolores ad? Hic corrupti nulla ipsam cupiditate
+          molestias? Veniam perspiciatis atque earum, voluptatum omnis iusto
+          voluptate aliquid, dolorum voluptates totam eaque? Quae laborum quam
+          placeat ad blanditiis autem facilis magnam architecto eveniet mollitia
+          quod, rem possimus.
+        </li>
+      </ul>
 
-        <!--Paragraf etiketi-->
-        <p>bu blog sayfasında istanbul anlatılacaktır.</p>
+      <!--Paragraf etiketi-->
+      <p>bu blog sayfasında istanbul anlatılacaktır.</p>
 
-        <button>Tıkla</button>
+      <button>Tıkla</button>
 
-        <!--input-->
-        <input type="checkbox">araba
-        <input type="checkbox">otobus
+      <!--input-->
+      <input type="checkbox" />araba <input type="checkbox" />otobus
 
-        <input type="radio">araba
-        <input type="radio">otobus
+      <input type="radio" />araba <input type="radio" />otobus
 
-        <input type="color">
-        <input type="date">
-        <input type="email">
-        <input type="password">
-        <input type="number">
-        <input type="text">
-        <input type="file">
-        <!--Bölümler-->
-        <section>
-            burası bir bölüm
-        </section>
+      <input type="color" />
+      <input type="date" />
+      <input type="email" />
+      <input type="password" />
+      <input type="number" />
+      <input type="text" />
+      <input type="file" />
+      <!--Bölümler-->
+      <section>burası bir bölüm</section>
 
-        <div>
-            <p>deneme</p>
-        </div>
+      <div>
+        <p>deneme</p>
+      </div>
 
-        <!--semantik olmaya bazı etiketlerin devamı-->
+      <!--semantik olmaya bazı etiketlerin devamı-->
 
-        <div>
-            <p>Burada <b>çalışma</b> yapılacaktır</p>
-            <img src="./assets/image.png" alt="bozuk resim" width="200px">
-        </div>
-
-
+      <div>
+        <p>Burada <b>çalışma</b> yapılacaktır</p>
+        <img src="./assets/image.png" alt="bozuk resim" width="200px" />
+      </div>
     </main>
     <footer>
-        <address>
-            <ul>
-                <li>Email: <a href="mailto:buraksarpkaya@gmail.com">burak sarpkaya</a></li>
-                <a href="https://google.com.tr">Google</a>
-            </ul>
-        </address>
+      <address>
+        <ul>
+          <li>
+            Email: <a href="mailto:buraksarpkaya@gmail.com">burak sarpkaya</a>
+          </li>
+          <a href="https://google.com.tr">Google</a>
+        </ul>
+
+        <p>gitpush deneme</p>
+      </address>
     </footer>
-
-</body>
-
+  </body>
 </html>
